# 260615_Nor_QuantPaticle

./: .gitignore  README.md  pyproject.toml  run_backtest.py  run_backtest_diagnostics.py  run_data_pipeline.py  run_factor_analysis.py  run_factor_pipeline.py
config/: strategy.yaml
docs/: migration_notes.md
reports/: backtest_realism_report.md  backtest_report.md  composite_factor_report.md  data_quality_summary.md  factor_analysis_report.md  factor_quality_summary.md
src/twse_factor_lab/: __init__.py
src/twse_factor_lab/alphalens/: __init__.py  formatter.py
src/twse_factor_lab/analysis/: __init__.py  forward_returns.py  information_coefficient.py  monotonicity.py  preparation.py  (+3 more)
tests/: test_alphalens_formatter.py  test_backtest_diagnostics_pipeline.py  test_backtest_engine.py  test_backtest_engine_comparison.py  test_backtest_pipeline.py  test_backtest_scenarios.py  test_buffer_selection_rule.py  test_cost_model.py  test_endpoints.py  test_factor_alignment.py  test_factor_analysis_metrics.py  test_factor_analysis_pipeline.py  test_factor_pipeline.py  test_factor_ranking.py  test_factor_scoreboard.py  test_manifest.py  test_matrix_builder.py  test_no_lookahead.py  test_normalizer.py  test_parquet_store.py  test_pipeline.py  test_portfolio_selection.py  test_portfolio_weights.py  test_price_volume_factors.py  test_quality_report_semantics.py  test_rebalance_calendar.py  test_rebalance_sensitivity.py  test_topn_sensitivity.py  test_turnover_diagnostics.py  test_twse_client.py  test_universe_expansion_config.py  test_valuation_factors.py  test_yfinance_client.py
(+25 files in other folders)
