[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "twse-factor-lab"
version = "0.1.0"
description = "TWSE factor research data layer with yfinance fallback and Parquet cache."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=15",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "requests>=2.31",
    "yfinance>=0.2",
]

[project.optional-dependencies]
dev = [
    "black>=24.0",
    "jupyter>=1.0",
    "pytest>=8.0",
    "ruff>=0.5",
]
roadmap = [
    "alphalens-reloaded>=0.4",
    "matplotlib>=3.8",
    "plotly>=5.0",
    "vectorbt>=0.26",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.black]
line-length = 88
target-version = ["py311"]
